<resources>
    <string name="app_name">AppGradeHackaton</string>

    <!-- LoginPage Strings -->
    <string name="firstNameHint">שם פרטי</string>
    <string name="btnSignIn">הירשם</string>
    <string name="lastNameHint">שם משפחה</string>
    <string name="emailHint">דואר אלקטרוני</string>
    <string name="passwordHint">סיסמא</string>
    <string name="signUpFailed">ההרשמה נכשלה</string>

    <!-- LoginPage Errors -->
    <string name="NameIsNotValid">שם המשתמש לא יכול להיות ריק או להכיל מספרים</string>
    <string name="EmailNotValid">דואר אלקטרוני לא חוקי</string>
    <string name="PasswordTooShort">הסיסמא חייבת להכיל מעל 5 תווים</string>

    <!-- Add course activity -->
    <string name="addCourseToolTipTxt">הוספת קורס</string>
    <string name="next">הבא</string>
    <string name="back">חזור</string>

    <!-- Fragments strings -->
    <string name="locationDescription">מיקומך מאפשר לנו למצוא סטונדטים נוספים בקרבתך</string>
    <string name="semesterDefault">סמסטר א\'</string>
    <string name="yearEditTxtDefault">שנת לימודים</string>
    <string name="semesterDefaultEditText">סמסטר</string>
    <string name="fragmentLocationHint">בחר מיקום...</string>


</resources>
