<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolBar"
        android:background="@color/primary_dark"
        android:layout_alignParentTop="true"
        >

        <TextView
            android:layout_width="104dp"
            android:layout_height="28dp"
            android:textColor="@color/secondry"
            android:text="@string/addCourseToolTipTxt"
            android:textSize="20dp" />

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:id="@+id/addCourseBottomNav"
        android:background="@color/secondry"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textSize="16dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="14dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textSize="16dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="16dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="14dp"/>

    </RelativeLayout>

    <android.support.v4.view.ViewPager
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addCourseViewPager"
        android:layout_below="@id/toolBar"
        android:layout_above="@id/addCourseBottomNav"
        >

    </android.support.v4.view.ViewPager>




</RelativeLayout>